JumpScript/tests/baselines/reference/unusedTypeParameters4.errors.txt
tests/cases/compiler/unusedTypeParameters4.jump(2,13): error TS6133: 'U' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParameters4.jump (1 errors) ====
    var x: {
        new <T, U>(a: T): void;
                ~
!!! error TS6133: 'U' is declared but its value is never read.
    }